--- a/css/base.css
+++ b/css/base.css
@@ -6,7 +6,6 @@ body{
   margin: 0;
   padding: 0;
   font-family: 'Roboto', sans-serif;
-  width: auto;
 }
 
 a{
