--- a/css/main.css
+++ b/css/main.css
@@ -3,15 +3,14 @@
 */
 
 .header{
-  background-color: #f7f7f7;
-
-
-}
-.header_wrap{
-  /*width: 1200;*/
+  position: relative;
+  top: 0px;
+  left: 0px;
+  right: 0px;
+  z-index: 2;
   height: 80px;
   margin: 0 auto;
-  position: relative;
+  background-color: #f7f7f7;
 }
 .header_logo{
   width: 150px;
@@ -79,11 +78,15 @@ FIRST SCREEN
   position: relative;
   overflow: hidden;
 }
+.screen-1_wrap{
+  max-width: 1200px;
+  margin: 0px auto;
+  height: 100%;
+  position: relative;
+}
 .screen-1_heading{
-  font-weight: 100;
-  margin: 0;
-  padding: 0;
   font-size: 46px;
+  font-weight: 100;
   color: #4d555d;
   text-align: center;
   padding-top: 152px;
@@ -100,7 +103,7 @@ FIRST SCREEN
   left: 50%;
   margin-left: -687px;
   bottom: 180px;
-  z-index: 3;
+  z-index: 1;
 }
 .screen-1_shadow{
   width: 1233px;
@@ -122,10 +125,15 @@ SECOND SCREEN
   height: 800px;
   position: relative;
 }
+.screen-2_wrap{
+  max-width: 1200px;
+  margin: 0px auto;
+  height: 100%;
+  position: relative;
+  overflow: hidden;
+}
 .screen-2_heading{
   font-weight: 100;
-  margin: 0;
-  padding: 0;
   font-size: 46px;
   color: #f01400;;
   text-align: center;
@@ -133,52 +141,51 @@ SECOND SCREEN
   line-height: 46px;
 }
 .screen-2_subheading{
-  font-weight: 100;
-  margin: 0;
-  padding: 0;
-  font-size: 14px;
-  color: #2c3137;
-  text-align: center;
   padding-top: 25px;
+  color: #2c3137;
   line-height: 28px;
+  font-size: 14px;
+  font-weight: 100;
+  text-align: center;
 }
 .screen-2_phone{
-  width: 928px;
+  width: 800px;
   height: 873px;
-  background:url('../img/bg-screen-2.png') no-repeat center;
+  background:url('../img/bg-screen-2.png') no-repeat;
   position: absolute;
   left: 50%;
-  margin-left: -400px;
+  margin-left: -385px;
   bottom: -345px;
 
 }
 .screen-2_point{
   width: 150px;
-  padding-right: 90px;
   height: 22px;
   font-size: 22px;
   font-weight: 100;
   align-items: center;
   color: #4d555d;
   position: absolute;
-  background:url('../img/icon-point-right.png') no-repeat center right;
-
-}
-.screen-2_point_custom_right{
-  padding: 0 0 0 112px;
-  background:url('../img/icon-point-left.png') no-repeat center left;
 }
 .screen-2_point_i_1{
-  top: 150px;
-  left: -180px;
+  top: 190px;
+  left: -140px;
+  padding-right: 112px;
+  background:url('../img/icon-point-right.png') no-repeat center right;
 }
 .screen-2_point_i_2{
   top: 40px;
-  right: 105px;
+  left: 584px;
+
+  padding-left: 112px;
+  background:url('../img/icon-point-left.png') no-repeat center left;
 }
 .screen-2_point_i_3{
-  top: 330px;
-  right: 0px;
+  top: 340px;
+  left: 680px;
+
+  padding-left: 112px;
+  background:url('../img/icon-point-left.png') no-repeat center left;
 }
 
 
@@ -188,47 +195,48 @@ THIRD SCREEN
 .screen-3{
   background-color:  rgba(56, 58, 58, 1);
   height: 800px;
-  position: relative;
-  overflow: hidden;
   background:url('../img/bg-screen-3.png') no-repeat center cover;
 }
 .screen-3_wrap{
-  width: 1200px;
-  height: auto;
+  max-width: 1200px;
+  height: 100%;
   margin: 0 auto;
   position: relative;
+  overflow: hidden;
 }
 .screen-3_heading{
-  font-weight: 100;
+  position: absolute;
   font-size: 46px;
+  font-weight: 100;
   color: #fff;
   text-align: left;
-  padding-top: 96px;
-  line-height: 46px;
+  top: 96px;
+  height: 46px;
+  padding-left: 10px;
 }
 .screen-3_subheading{
+  position: absolute;
   font-size: 14px;
   width: 450px;
   color: #fff;
   text-align: left;
-  padding-top: 25px;
+  top: 160px;
   line-height: 28px;
-  display: inline-block;
+  left: 10px;
 }
 .screen-3_phone{
-  width: 750px;
+  position: absolute;
+  width: 729px;
   height: 873px;
   background:url('../img/bg-screen-3.png') no-repeat center top;
-  position: absolute;
-  right: 0;
-  top: 195px;
-  z-index: 0;
+  left: 465px;
+  top: 200px;
 }
 
 .screen-3_features{
   position: absolute;
   top: 395px;
-  left: 0;
+  left: 5px;
   width: 320px;
   height: 280px;
 }
@@ -271,12 +279,15 @@ FORTH SCREEN
   background: #fff;
   height: 800px;
   position: relative;
+  text-align: center;
+  overflow: hidden;
+
 }
 
 .screen-4_wrap{
-  width: 1200px;
-  height: auto;
-  margin: 0 auto;
+  max-width: 1200px;
+  margin: 0px auto;
+  height: 100%;
   position: relative;
 }
 .screen-4_heading{
@@ -284,7 +295,6 @@ FORTH SCREEN
   font-weight: 100;
   line-height: 46px;
   color: #f01400;
-  text-align: center;
   padding-top: 135px;
 }
 .screen-4_subheading{
@@ -312,18 +322,6 @@ FORTH SCREEN
   text-align: center;
   background-size: cover;
 }
-.screen-4_type_item_i_1{
-  background:url('../img/phone-1.png') no-repeat left top;
-}
-.screen-4_type_item_i_2{
-  background:url('../img/phone-2.png') no-repeat left top;
-}
-.screen-4_type_item_i_3{
-  background:url('../img/phone-3.png') no-repeat left top;
-}
-.screen-4_type_item_i_4{
-  background:url('../img/phone-4.png') no-repeat left top;
-}
 .screen-4_type_item_title{
   width: 100%;
   height: 14px;
@@ -343,6 +341,18 @@ FORTH SCREEN
   bottom: -66px;
 }
 
+.screen-4_type_item_i_1{
+  background:url('../img/phone-1.png') no-repeat left top;
+}
+.screen-4_type_item_i_2{
+  background:url('../img/phone-2.png') no-repeat left top;
+}
+.screen-4_type_item_i_3{
+  background:url('../img/phone-3.png') no-repeat left top;
+}
+.screen-4_type_item_i_4{
+  background:url('../img/phone-4.png') no-repeat left top;
+}
 
 /*
 FIFTH SCREEN
@@ -362,8 +372,16 @@ FIFTH SCREEN
   left: 50%;
   margin-left: -960px;
   bottom: -100px;
-
 }
+
+.screen-5__wrap {
+    max-width: 1200px;
+    margin: 0px auto;
+    height: 100%;
+    position: relative;
+    overflow: hidden;
+}
+
 .screen-5_heading{
   font-weight: 100;
   margin: 0;
@@ -408,13 +426,19 @@ SIXTH SCREEN
   background-color: #f01414;
   display: inline-block;
   border-radius: 3px;
-  transition: all .5s;
+  transition: all .5s ease-in-out;
   cursor: pointer;
 }
 .screen-6_button:hover{
-  box-shadow: 0px 0px 10px  rgba(125, 125, 125, 0.5);
+  box-shadow: 0px 0px 10px  rgba(0, 0, 0, 0.5);
+  color: #fff;
+  background-color: transparent;
+  border: 1px solid #f01414;
 }
 
+/*
+FOOTER
+*/
 footer{
   height: 80px;
   line-height: 80px;
@@ -422,4 +446,40 @@ footer{
   font-size: 12px;
   color: #fff;
   background-color: #07111b;
+}
+
+/*
+SIDE-BAR
+*/
+.outline{
+  position: fixed;
+  padding: 5px 10px;
+  bottom: 120px;
+  right:0;
+  z-index: 1;
+  background-color: #fff;
+  box-shadow: 0 0 12px rgba(0,0,0,.4);
+  border-radius: 2px;
+}
+.outline_item{
+  display: block;
+  width: 75px;
+  height: 25px;
+  line-height: 30px;
+  font-size: 12px;
+  letter-spacing: .09em;
+  font-weight: 300;
+  text-align: left;
+  padding: 4px 0;
+  background-color: #fff;
+  margin-top: 5px;
+  border-top: 1px solid #eee;
+  color: #93999f;
+}
+.outline_item:first-child{
+  border-top: 0;
+  margin-top: 0;
+}
+.outline_item_status_active{
+  color: red;
 }
